// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JIRA wiki markup - Images and attachments should find absolute URL images 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "indentLevel": null,
      },
      "content": Array [
        Object {
          "text": "!http://www.host.com/image.gif!",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Images and attachments should find attachments in multiline string 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "indentLevel": null,
      },
      "content": Array [
        Object {
          "text": "this is a line of text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "layout": "wide",
      },
      "content": Array [
        Object {
          "attrs": Object {
            "__displayType": null,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__key": null,
            "collection": "",
            "height": null,
            "id": "image.gif",
            "occurrenceKey": null,
            "type": "file",
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
    Object {
      "attrs": Object {
        "indentLevel": null,
      },
      "content": Array [
        Object {
          "text": "yep",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Images and attachments should find attachments in the text 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "layout": "wide",
      },
      "content": Array [
        Object {
          "attrs": Object {
            "__displayType": null,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__key": null,
            "collection": "",
            "height": null,
            "id": "file.txt",
            "occurrenceKey": null,
            "type": "file",
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Images and attachments should find attachments with attributes 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "layout": "wide",
      },
      "content": Array [
        Object {
          "attrs": Object {
            "__displayType": null,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__key": null,
            "collection": "",
            "height": null,
            "id": "quicktime.mov",
            "occurrenceKey": null,
            "type": "file",
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Images and attachments should find images in the text 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "layout": "wide",
      },
      "content": Array [
        Object {
          "attrs": Object {
            "__displayType": null,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__key": null,
            "collection": "",
            "height": null,
            "id": "image.png",
            "occurrenceKey": null,
            "type": "file",
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
  ],
  "type": "doc",
}
`;
